[package]
name = "panic-custom"
version = "0.1.0"
authors = ["notforest <notforest69@gmail.com>"]
description = "Small panicking rust crate that allows to easily set the behavior of panicking for embedded or regular no_std binaries."
repository = "https://github.com/not-forest/panic-custom"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

keywords   = ["panic", "halt", "abort", "custom", "custom panic"]
categories = ["panic", "embedded", "no-std"]

[dependencies]
panic-custom-proc-macros = { version = "0.1.0", path = "./src/panic-custom-proc-macros/", optional = true}

[features]
proc_macros = ["panic-custom-proc-macros"]
abort_on_debug = []
abort_on_release = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
